--- a/2 lesson/5 - задание.html
+++ b/2 lesson/5 - задание.html
@@ -36,6 +36,6 @@ function promptNumbers(x, z, y){
 promptNumbers(x, z, y);
 
 // доработки
-//ввод чисел отдельная функция - проверка чисел отдельная функция - запрос ввода корректных данных отдельная для каждого числа и знака
+//ввод чисел отдельная функция - проверка чисел отдельная функция - запрос ввода корректных данных отдельная для каждого числа и знака - проверка на 0
 
 </script>
