--- a/3 lesson/2 - task.html
+++ b/3 lesson/2 - task.html
@@ -19,5 +19,21 @@ function writeNumber(a) {
 
 writeNumber(a);
 
+/* document.write("<H2>Задание 2</H2>");
+num = 0; 
+do {
+    document.write(num + " - ");
+    if (num == 0) {
+        document.write("это ноль");
+    } else if (num % 2 ==0) {
+        document.write("это четное число");
+    } else {
+        document.write("это нечетное число");
+    }
+    document.write("<br>");
+    num++;
+} while (num <= 10);
+*/
+
 </script>
 
