--- a/4 lesson/3 task/game.html
+++ b/4 lesson/3 task/game.html
@@ -1,4 +1,114 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Millionaire</title>
+</head>
+<body>
+    <a href="#" onclick="startGame()">Запуск игры</a><br>
+
+
 <script>
+var event, answerCorrect,money=0;
+var ok = false;
+
+function startGame() {
+    answerCorrect = 0;
+    for (var i = 0; i < questions.length; i++) {
+        do {
+            event = parseInt(prompt(questions[i].question + "\n" + questions[i].answer1 + "\n" + questions[i].answer2 + "\n" +
+                questions[i].answer3 + "\n" + questions[i].answer4 + "\n" + '-1 - Выход из игры'));
+            if (event == -1) {
+                break;
+            }
+            else {
+                ok = isAnswer(event);
+            }
+        } while (!ok);
+        if(event === questions[i].correct) {
+            answerCorrect++;
+        } else {
+            break;
+        }
+    }
+    alert("Кол-во правильных ответов: " + answerCorrect);
+    alert('Спасибо за игру');
+}
+
+//------------------------------------------
+function isAnswer(event) {
+    if (isNaN(event) || !isFinite(event)) {
+        alert('Вы ввели недопустимый символ');
+        return false;
+    }
+    else if (event < 1 || event > 4) {
+        alert('Ваше число выходит из допустимого диапозона');
+        return false;
+    }
+    return true;
+}
+
+var questions = [];
+
+questions[0] = {
+    question: 'Как заканчивается присказка: «Мы и сами с…»?',
+    answer1: '1. с волосами',
+    answer2: '2. с усами',
+    answer3: '3. с часами',
+    answer4: '4. с долгами',
+    correct: 2
+};
+
+questions[1] = {
+    question: 'Как в обиходе называют растение, которое часто дарят женщинам к празднику 8 марта?',
+    answer1: '1. оливье',
+    answer2: '2. винегрет',
+    answer3: '3. мимоза',
+    answer4: '4. селёдка под шубой',
+    correct: 3
+};
+
+questions[2] = {
+    question: 'Как называлась песня, которую исполнял Лев Лещенко?',
+    answer1: '1. «Воробьиная стая»',
+    answer2: '2. «Соловьиная роща»',
+    answer3: '3. «Ласточкино гнездо»',
+    answer4: '4. «Воронья слободка»',
+    correct: 2
+};
+
+questions[3] = {
+    question: 'С помощью чего пасссажиры часто попадают в самолет?',
+    answer1: '1. рукава',
+    answer2: '2. воротника',
+    answer3: '3. лацкана',
+    answer4: '4. манжеты',
+    correct: 1
+};
+
+questions[4] = {
+    question: 'Какой клетки нет на шахматной доске?',
+    answer1: '1. h8',
+    answer2: '2. b7',
+    answer3: '3. k6',
+    answer4: '4. g5',
+    correct: 3
+};
+
+questions[5] = {
+    question: 'На каком курсе школы Хогвартс учился Гарри Поттер, когда раскрыл секрет Тайной комнаты?',
+    answer1: '1. на первом',
+    answer2: '2. на втором',
+    answer3: '3. на третьем',
+    answer4: '4. на четвёртом',
+    correct: 2
+};
+
+</script>
+
+</body>
+</html>
+/* мой недоделанный вариант
 var q1 = {q: "Вопрос 1\n",
             a1: "ответ 1\n",
             a2: "ответ 2\n",
